# alltap

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
alltap/: __init__.py  camera.py  main.py  tracker.py  types.py
alltap/gestures/: __init__.py  classifier.py  events.py  geometry.py  pointer.py  scroll.py
alltap/input/: __init__.py
alltap/ui/: __init__.py
alltap/utils/: __init__.py  config.py  logger.py
config/: default_config.json
scripts/: check_camera.py  check_tracker.py
tests/: test_camera.py  test_classifier.py  test_smoke.py  test_tracker.py
