[project]
name = "alltap"
version = "0.1.0"
description = "Turn any non-touch monitor into a touch surface using a standard USB webcam"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Kimin Lee" }]
keywords = ["gesture", "hand-tracking", "webcam", "touch", "accessibility", "mediapipe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pystray>=0.19.4",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.13.4",
]

[project.scripts]
alltap = "alltap.main:main"

[project.urls]
Homepage = "https://github.com/thekiminlee/alltap"
Repository = "https://github.com/thekiminlee/alltap"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alltap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
